--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+---
+title: "Welcome to my blog"
+date: 2021-04-13
+---
 theme: minima
 title: Computational Experimental Economics
 author: kmccabe
