--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 ---
-title: "Welcome to my blog"
+title: "Kevin McCabe"
 date: 2021-04-13
 ---
+
 theme: minima
 title: Computational Experimental Economics
 author: kmccabe
