--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ theme: minima
 author: kmccabe
 email: kmccabe@gmu.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
+  Hello to you for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
